fixing Discord/Github color so they aren't invisible

--- a/public/style.css
+++ b/public/style.css
@@ -159,5 +159,5 @@ h1 {
   width: inherit;
 }
 #bottom > a {
-  color: rgba(0, 0, 0, 0.5);
+  color: #fff;
 }
